Add missing trolls and memory optimizations todo: - vanish system